--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,11 @@ deps =
      attrs
      py{27,py}: mock
      py{27,py}: typing
-commands = pytest -vl --cov=attr_strict --cov-report term-missing --cov-fail-under 100
+commands = pytest -vl --cov=attrs_strict --cov-report term-missing --cov-fail-under 100
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 attr_strict
+commands = flake8 attrs_strict
 
 [flake8]
 max-line-length = 80
