Update TravisCI .yml file
Signed-off-by: Erik <eseulean@bloomberg.net>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ script:
 matrix:
   include:
     - python: "3.7"
-      script: black --check attr_strict tests setup.py
+      script: black --check attrs_strict tests setup.py
       install: pip install black
