--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ install:
   - pip install tox-travis
 script:
   - tox
+
+deploy:
+  - provider: script
+    script: python -m pip install tox && tox -vve publish
+    on:
+      tags: true
+      python: "3.7"
+      condition: -n "$PYPI_PASSWORD"
