--- a/tox.ini
+++ b/tox.ini
@@ -45,11 +45,21 @@ description = check that the long description is valid
 basepython = python3.7
 deps = twine >= 1.12.1
        readme-renderer[md] >= 24.0
-       pip >= 19.2.0
        pep517
 skip_install = true
 commands = python -m pep517.build -s -b . -o {envtmpdir}
            twine check {envtmpdir}/*
+
+[testenv:pypi_publish]
+changedir = {toxinidir}
+description = Upload a new package to pypi
+basepython = python3.7
+deps = twine >= 1.12.1
+       pep517
+passenv = PYPI_USER PYPI_PASSWORD HTTPS_PROXY NO_PROXY
+skip_install = true
+commands = python -m pep517.build -s -b . -o {envtmpdir}
+           twine upload -u "{env:PYPI_USER}" -p "{env:PYPI_PASSWORD}" {envtmpdir}/*
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
