Add verbose flag to twine
Signed-off-by: Erik <eseulean@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -56,10 +56,10 @@ description = Upload a new package to pypi
 basepython = python3.7
 deps = twine >= 1.12.1
        pep517
-passenv = PYPI_USER PYPI_PASSWORD HTTPS_PROXY NO_PROXY
+passenv = *
 skip_install = true
 commands = python -m pep517.build -s -b . -o {envtmpdir}
-           twine upload -u "{env:PYPI_USER}" -p "{env:PYPI_PASSWORD}" {envtmpdir}/*
+           twine upload --verbose -u __token__ -p "{env:PYPI_PASSWORD}" {envtmpdir}/*
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
