--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,5 +1,13 @@
+version: 2
+sphinx:
+  builder: html
+  configuration: doc/conf.py
+  fail_on_warning: true
+formats: all
 python:
    version: 3.7
    install:
       - method: pip
         path: .
+build:
+  image: latest
