--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ deploy:
     on:
       tags: true
       python: "3.7"
-      condition: -n "$PYPI_PASSWORD"
+      condition: -n "$TWINE_PASSWORD"
