add annotations and py.typed
Signed-off-by: Wilfred Wong <keiclone@users.noreply.github.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [bdist_wheel]
 universal = true
+
+[mypy]
+python_version = 3.7
+namespace_packages=True
+
+warn_unused_configs = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+disallow_untyped_defs = True
+strict_equality = True
