add type stubs and py.typed
Signed-off-by: Wilfred Wong <keiclone@users.noreply.github.com>

mypy --strict. add MANIFEST.in. run tox on both python versions

Signed-off-by: Wilfred Wong <keiclone@users.noreply.github.com>

rework type annotations as necessary

Signed-off-by: Wilfred Wong <keiclone@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,10 @@ envlist =
         py38,
         pypy,
         pypy3,
+        mypy27
+        mypy37,
         coverage,
+        merge,
         fix_lint,
         docs,
         package_description,
@@ -31,6 +34,25 @@ commands = python -m pytest \
            --cov-config "{toxinidir}/tox.ini" \
            --junitxml {toxworkdir}/junit.{envname}.xml \
            {posargs:.}
+
+
+[testenv:mypy]
+description = check that the type annotations within attrs-strict are self-consistent. Does NOT check if stub files align correctly with actual code.
+basepython = python3.7
+deps = mypy
+setenv =
+    {[testenv]setenv}
+    MYPYPATH={toxinidir}
+commands = mypy types --py2 --strict
+           mypy types --strict
+
+[testenv:merge]
+description = try to merge our types against our source
+deps = {[testenv:mypy37]deps}
+       retype
+changedir = {envtmpdir}
+commands = python -m retype -p {toxinidir}/types -t {envtmpdir}/attrs_strict {toxinidir}/attrs_strict
+           mypy -p {envtmpdir}/attrs_strict --strict --ignore-missing-imports {posargs}
 
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
