--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,19 @@
 repos:
 -   repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 19.10b0
     hooks:
     -   id: black
         args: [--safe]
-        language_version: python3.7
+        language_version: python3.8
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.3.0
+    rev: v1.7.0
     hooks:
     -   id: blacken-docs
         args: [--skip-errors]
         additional_dependencies: [black==19.3b0]
         language_version: python3.7
 -   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.2
+    rev: v2.1.1
     hooks:
     -   id: seed-isort-config
         args: [--application-directories, "src:."]
@@ -22,20 +22,27 @@ repos:
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v3.1.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
-    -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.8.0"]
-        language_version: python3.7
+- repo: https://gitlab.com/pycqa/flake8
+  rev: 3.8.2
+  hooks:
+  - id: flake8
+    additional_dependencies: ["flake8-bugbear == 20.1.2"]
+    language_version: python3.8
+- repo: https://github.com/asottile/setup-cfg-fmt
+  rev: v1.9.0
+  hooks:
+  - id: setup-cfg-fmt
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.24.0
+    rev: v2.4.4
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.4.1
+    rev: v1.5.1
     hooks:
     -   id: rst-backticks
