--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,45 @@
+[metadata]
+name = attrs_strict
+description = Runtime validators for attrs
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/bloomberg/attrs-strict
+author = Erik-Cristian Seulean
+author_email = eseulean@bloomberg.net
+license = Apache-2.0
+license_file = LICENSE
+classifiers =
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Operating System :: MacOS :: MacOS X
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+    Topic :: Software Development :: Libraries
+    Topic :: Software Development :: Testing
+    Topic :: Utilities
+project_urls =
+    Source=https://github.com/bloomberg/attrs-strict
+    Tracker=https://github.com/bloomberg/attrs-strict/issues
+    Documentation=https://github.com/bloomberg/attrs-strict/blob/master/README.md#attrs-runtime-validation
+
+[options]
+packages = attrs_strict
+install_requires =
+    attrs
+    typing;python_version<'3.5'
+python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
+tests_require =
+    mock;python_version<'3.3'
+    pytest >= 4
+
 [bdist_wheel]
 universal = true
