Fix Github Actions
Yes.
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ skip_missing_interpreters = true
 description = run the tests with pytest under {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
+         {py,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
 passenv = http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_*
 deps =
     pytest
