--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,14 +19,11 @@ jobs:
     - uses: pre-commit/action@v1.1.0
 
   test:
-    name: ${{ matrix.os }}-Python${{ matrix.py }}
-    runs-on: ${{ matrix.os }}-latest
+    name: ${{ matrix.py }}
+    runs-on: Ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        os:
-        - Ubuntu
-        - Windows
-        - MacOS
         py:
         - 3.8
         - 3.7
@@ -36,22 +33,29 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.py }}
+    - name: setup python for tox
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: install tox
+      run: python -m pip install tox
+    - name: setup python for test ${{ matrix.py }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
-    - name: install tox
-      run: python -m pip install tox
+    - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
+      run: tox -vve py --notest
     - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
-      run: python -m tox -e py
+      run: tox -e py
 
   check:
     name: check ${{ matrix.tox_env }}
     runs-on: Ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         tox_env:
-        - readme
+        - package_description
         - docs
 
     steps:
