--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,16 @@
 [tox]
 envlist =
-        py27,
-        py36,
-        py37,
-        py38,
-        pypy,
-        pypy3,
-        mypy,
-        coverage,
-        merge,
-        fix_lint,
-        docs,
-        package_description,
+    py27,
+    py36,
+    py37,
+    py38,
+    pypy,
+    pypy3,
+    coverage,
+    type,
+    fix_lint,
+    docs,
+    package_description,
 minversion = 3.7
 isolated_build = true
 skip_missing_interpreters = true
@@ -26,45 +25,31 @@ deps =
     pytest-cov
     py{27,py}: mock
     py{27,py}: typing
-
-changedir = tests
-commands = python -m pytest \
+commands = pytest \
            --cov attrs_strict \
            --cov-config "{toxinidir}/tox.ini" \
            --junitxml {toxworkdir}/junit.{envname}.xml \
-           {posargs:.}
+           {posargs:tests}
 
-
-[testenv:mypy]
-description = check that the type annotations within attrs-strict are self-consistent. Does NOT check if stub files align correctly with actual code.
-basepython = python3.7
-deps = mypy
-setenv =
-    {[testenv]setenv}
-    MYPYPATH={toxinidir}
-commands = mypy types --py2 --strict
-           mypy types --strict
-
-[testenv:merge]
+[testenv:type]
 description = try to merge our types against our source
-deps = {[testenv:mypy]deps}
-       retype
-changedir = {envtmpdir}
-commands = python -m retype -p {toxinidir}/types -t {envtmpdir}/attrs_strict {toxinidir}/attrs_strict
-           mypy -p {envtmpdir}/attrs_strict --strict --ignore-missing-imports {posargs}
+deps =
+    mypy == 0.770
+    retype == 19.9.0
+commands =
+    retype -p src/attrs_strict src/attrs_strict -t {envtmpdir}
+    retype -p src/attrs_strict src/attrs_strict/_version.py -t {envtmpdir}
+    mypy {envtmpdir} --strict
 
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
-basepython = python3.7
 deps =
-     sphinx
+    sphinx
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" "{toxinidir}/doc" "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:package_description]
-changedir = {toxinidir}
 description = check that the long description is valid
-basepython = python3.7
 deps = twine >= 1.12.1
        readme-renderer[md] >= 24.0
        pep517
@@ -73,7 +58,6 @@ commands = python -m pep517.build -s -b . -o {envtmpdir}
            twine check {envtmpdir}/*
 
 [testenv:pypi_publish]
-changedir = {toxinidir}
 description = Upload a new package to pypi
 deps = twine >= 1.12.1
        pep517
@@ -84,8 +68,6 @@ commands = python -m pep517.build -s -b . -o {envtmpdir}
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-basepython = python3.7
-changedir = {toxinidir}
 passenv = {[testenv]passenv}
           # without PROGRAMDATA cloning using git for Windows will fail with an
           # `error setting certificate verify locations` error
@@ -126,9 +108,12 @@ exclude_lines =
     ^if __name__ == ['"]__main__['"]:$
 
 [coverage:paths]
-source = attrs_strict
+source = src/attrs_strict
          */.tox/*/lib/python*/site-packages/attrs_strict
          */.tox/pypy*/site-packages/attrs_strict
          */.tox\*\Lib\site-packages\attrs_strict
          */attrs_strict
          *\attrs_strict
+
+[pytest]
+junit_family=xunit1
