--- a/setup.cfg
+++ b/setup.cfg
@@ -34,12 +34,21 @@ project_urls =
 [options]
 packages = attrs_strict
 install_requires =
-    attrs
-    typing;python_version<'3.5'
+    attrs>=19.1.0
+    typing>=3.7.4.1;python_version<'3.5'
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
+package_dir =
+    =src
 tests_require =
     mock;python_version<'3.3'
     pytest >= 4
+
+[options.package_data]
+* = *.pyi
+attrs_strict = py.typed
+
+[options.packages.find]
+where = src
 
 [bdist_wheel]
 universal = true
