Support string annotations
Fixes #45

Signed-off-by: David Euresti <david@pilot.com>

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands = pytest \
            --cov-config "{toxinidir}/tox.ini" \
            --junitxml {toxworkdir}/junit.{envname}.xml \
            {posargs:tests}
+rsyncdirs = conftest.py
 
 [testenv:type]
 description = try to merge our types against our source
