--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ project_urls =
 packages = attrs_strict
 install_requires =
     attrs>=19.1.0
+    funcsigs>=1.0.2;python_version<'3.5'
     typing>=3.7.4.1;python_version<'3.5'
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
 package_dir =
