--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
 envlist =
-    py27,
-    py36,
-    py37,
-    py38,
-    pypy,
-    pypy3,
-    coverage,
-    type,
-    fix_lint,
-    docs,
-    package_description,
+    py27
+    py36
+    py37
+    py38
+    pypy
+    pypy3
+    coverage
+    type
+    fix_lint
+    docs
+    package_description
 minversion = 3.7
 isolated_build = true
 skip_missing_interpreters = true
@@ -109,4 +109,4 @@ source = src/attrs_strict
          *\attrs_strict
 
 [pytest]
-junit_family=xunit1
+junit_family=xunit2
