Update to 3.9 final
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
     py37
     py38
     py39
-    pypy
+    pypy2
     pypy3
     coverage
     type
@@ -20,13 +20,13 @@ skip_missing_interpreters = true
 description = run the tests with pytest under {basepython}
 setenv = PIP_DISABLE_VERSION_CHECK = 1
          COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-         {py,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+         {py,py27,pypy2}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
 passenv = http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_*
 deps =
     pytest
     pytest-cov
-    py{27,py}: mock
-    py{27,py}: typing
+    py{27,py2}: mock
+    py{27,py2}: typing
 commands = pytest \
            --cov attrs_strict \
            --cov-config "{toxinidir}/tox.ini" \
