--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         py:
-        - 3.9-dev
+        - 3.9
         - 3.8
         - 3.7
         - 3.6
@@ -32,22 +32,26 @@ jobs:
     - name: setup python for tox
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: install tox
       run: python -m pip install tox
     - name: setup python for test ${{ matrix.py }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
-    - name: pick environment to run
+    - name: Pick environment to run
       run: |
-        import subprocess; import json
-        major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
-        print('::set-env name=TOXENV::' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")))
+        import platform; import os; import sys; import codecs
+        cpy = platform.python_implementation() == "CPython"
+        base =("{}{}{}" if cpy else "{}{}").format("py" if cpy else "pypy", *sys.version_info[0:2])
+        env = "TOXENV={}\n".format(base)
+        print("Picked:\n{}for{}".format(env, sys.version))
+        with codecs.open(os.environ["GITHUB_ENV"], "a", "utf-8") as file_handler:
+             file_handler.write(env)
       shell: python
-    - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
+    - name: setup test suite for ${{ matrix.py }}
       run: tox -vv --notest
-    - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
+    - name: run test suite for ${{ matrix.py }}
       run: tox --skip-pkg-install
 
   check:
@@ -62,10 +66,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: setup Python 3.8
+    - name: setup Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: install tox
       run: python -m pip install tox
     - name: run check for ${{ matrix.tox_env }}
@@ -79,12 +83,12 @@ jobs:
     - name: setup python to build package
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
-    - name: install pep517
-      run: python -m pip install pep517
+        python-version: 3.9
+    - name: install build
+      run: python -m pip install build
     - uses: actions/checkout@v2
     - name: build package
-      run: python -m pep517.build -s -b . -o dist
+      run: python -m build --sdist --wheel . -o dist
     - name: publish to PyPi
       uses: pypa/gh-action-pypi-publish@master
       with:
