--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         py:
-        - 3.9-dev
+        - 3.9
         - 3.8
         - 3.7
         - 3.6
@@ -32,7 +32,7 @@ jobs:
     - name: setup python for tox
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: install tox
       run: python -m pip install tox
     - name: setup python for test ${{ matrix.py }}
@@ -41,10 +41,10 @@ jobs:
         python-version: ${{ matrix.py }}
     - name: pick environment to run
       run: |
-        import subprocess; import json
+        import subprocess; import json; import os
         major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
-        print('::set-env name=TOXENV::' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")))
-      shell: python
+        with open(os.environ['GITHUB_ENV'], 'a') as file_handler:
+             file_handler.write('TOXENV=' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")) + "\n")
     - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
       run: tox -vv --notest
     - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
@@ -62,10 +62,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: setup Python 3.8
+    - name: setup Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: install tox
       run: python -m pip install tox
     - name: run check for ${{ matrix.tox_env }}
@@ -79,7 +79,7 @@ jobs:
     - name: setup python to build package
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: install pep517
       run: python -m pip install pep517
     - uses: actions/checkout@v2
