--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -39,12 +39,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.py }}
-    - name: pick environment to run
+    - name: Pick environment to run
+      shell: python
       run: |
-        import subprocess; import json; import os
+        import subprocess; import json
         major, minor, impl = json.loads(subprocess.check_output(["python", "-c", "import json; import sys; import platform; print(json.dumps([sys.version_info[0], sys.version_info[1], platform.python_implementation()]));"], universal_newlines=True))
-        with open(os.environ['GITHUB_ENV'], 'a') as file_handler:
-             file_handler.write('TOXENV=' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")) + "\n")
+        print('::set-env name=TOXENV::' + ("py" if impl == "CPython" else "pypy") + ("{}{}".format(major, minor) if impl == "CPython" else ("3" if major == 3 else "")))
     - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
       run: tox -vv --notest
     - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
