--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,7 +44,7 @@ jobs:
         import platform; import os; import sys; import codecs
         cpy = platform.python_implementation() == "CPython"
         base =("{}{}{}" if cpy else "{}{}").format("py" if cpy else "pypy", *sys.version_info[0:2])
-        env = "BASE={}\n".format(base)
+        env = "TOXENV={}\n".format(base)
         print("Picked:\n{}for{}".format(env, sys.version))
         with codecs.open(os.environ["GITHUB_ENV"], "a", "utf-8") as file_handler:
              file_handler.write(env)
