--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -49,9 +49,9 @@ jobs:
         with codecs.open(os.environ["GITHUB_ENV"], "a", "utf-8") as file_handler:
              file_handler.write(env)
       shell: python
-    - name: setup test suite for ${{ matrix.os }}-${{ matrix.py }}
+    - name: setup test suite for ${{ matrix.py }}
       run: tox -vv --notest
-    - name: run test suite for ${{ matrix.os }}-${{ matrix.py }}
+    - name: run test suite for ${{ matrix.py }}
       run: tox --skip-pkg-install
 
   check:
@@ -84,11 +84,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: install pep517
-      run: python -m pip install pep517
+    - name: install build
+      run: python -m pip install build
     - uses: actions/checkout@v2
     - name: build package
-      run: python -m pep517.build -s -b . -o dist
+      run: python -m build --sdist --wheel . -o dist
     - name: publish to PyPi
       uses: pypa/gh-action-pypi-publish@master
       with:
