--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,48 +1,41 @@
 repos:
 -   repo: https://github.com/psf/black
-    rev: 19.10b0
+    rev: 20.8b1
     hooks:
     -   id: black
         args: [--safe]
-        language_version: python3.8
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.7.0
+    rev: v1.8.0
     hooks:
     -   id: blacken-docs
         args: [--skip-errors]
         additional_dependencies: [black==19.3b0]
-        language_version: python3.8
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
-    -   id: seed-isort-config
-        args: [--application-directories, "src:."]
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.1.4
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.6.3
     hooks:
     -   id: isort
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.3
+- repo: https://github.com/PyCQA/flake8
+  rev: 3.8.4
   hooks:
   - id: flake8
-    additional_dependencies: ["flake8-bugbear == 20.1.2"]
+    additional_dependencies: ["flake8-bugbear == 20.1.4"]
     language_version: python3.8
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.11.0
+  rev: v1.15.0
   hooks:
   - id: setup-cfg-fmt
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.7.1
+    rev: v2.7.2
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.5.1
+    rev: v1.6.0
     hooks:
     -   id: rst-backticks
