--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ build-backend = 'setuptools.build_meta'
 [tool.black]
 line-length = 80
 
+[tool.isort]
+profile = "black"
+known_first_party = ["attrst_strict", "tests"]
+
 [tool.setuptools_scm]
 write_to = "src/attrs_strict/_version.py"
 write_to_template = """
