--- a/setup.cfg
+++ b/setup.cfg
@@ -41,9 +41,15 @@ install_requires =
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
 package_dir =
     =src
-tests_require =
+
+[options.extras_require]
+docs =
+    Sphinx>=3
+test =
+    pytest>=4
+    pytest-cov>=2.6
     mock;python_version<'3.3'
-    pytest >= 4
+    typing;python_version<'3.4'
 
 [options.package_data]
 * = *.pyi
