--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,10 @@ project_urls =
 packages = attrs_strict
 install_requires =
     attrs>=19.1.0
+    enum34;python_version<"3.4"
     funcsigs>=1.0.2;python_version<'3.5'
     typing>=3.7.4.1;python_version<'3.5'
+    typing_extensions;python_version<'3.8'
 python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
 package_dir =
     =src
@@ -48,7 +50,10 @@ docs =
 test =
     pytest>=4
     pytest-cov>=2.6
+    enum34;python_version<"3.4"
     mock;python_version<'3.3'
+    typing;python_version<'3.4'
+    typing_extensions;python_version<'3.8'
 
 [options.package_data]
 * = *.pyi
