--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,9 @@ commands =
       --cov-report html:"{toxworkdir}/{envname}/coverage" --cov-context=test \
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests}
+package = wheel
 rsyncdirs = conftest.py
+wheel_build_env = .pkg
 
 [testenv:fix_lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
