Drop Python 2 support and add 3.10 support
Signed-off-by: Bernát Gábor <gaborjbernat@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
 [build-system]
 requires = [
-    "setuptools >= 44",
-    "wheel >= 0.30",
-    "setuptools_scm[toml]>=3.4",
+    "setuptools>=58",
+    "setuptools-scm>=6",
 ]
 build-backend = 'setuptools.build_meta'
 
@@ -18,7 +17,7 @@ write_to = "src/attrs_strict/_version.py"
 write_to_template = """
 \"\"\" Version information \"\"\"
 
-__version__ = "{version}"
+__version__ :str = "{version}"
 
 # -----------------------------------------------------------------------------
 # Copyright 2019 Bloomberg Finance L.P.
