--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,42 @@
 [tox]
 envlist =
-    fix_lint
+    fix
+    py310
     py39
     py38
     py37
-    py36
-    py27
     pypy3
-    pypy2
-    coverage
     type
+    coverage
     docs
-    package_description
+    readme
 isolated_build = true
 skip_missing_interpreters = true
-minversion = 3.7
+minversion = 3.21
 
 [testenv]
-description = run the tests with pytest under {basepython}
+description = run tests with {basepython}
 passenv =
+    PIP_*
     PYTEST_*
-    SSL_CERT_FILE
 setenv =
-    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-    PIP_DISABLE_VERSION_CHECK = 1
-    {py,py27,pypy2}: PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
+    COVERAGE_FILE = {toxworkdir}{/}.coverage.{envname}
 extras =
     test
 commands =
-    pytest \
-      --cov attrs_strict \
-      --cov-config "{toxinidir}/tox.ini" \
-      --cov-report html:"{toxworkdir}/{envname}/coverage" --cov-context=test \
-      --junitxml {toxworkdir}/junit.{envname}.xml \
-      {posargs:tests}
+    pytest {tty:--color=yes} {posargs: \
+      --junitxml {toxworkdir}{/}junit.{envname}.xml --cov {envsitepackagesdir}{/}attrs_strict --cov {toxinidir}{/}tests \
+      --cov-config=setup.cfg --no-cov-on-fail --cov-report term-missing:skip-covered --cov-context=test \
+      --cov-report html:{envtmpdir}{/}htmlcov --cov-report xml:{toxworkdir}{/}coverage.{envname}.xml \
+      tests}
 package = wheel
-rsyncdirs = conftest.py
 wheel_build_env = .pkg
 
-[testenv:fix_lint]
+[testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 passenv =
-    {[testenv]passenv}
-    PROGRAMDATA
+    *
+basepython = python3.10
 skip_install = true
 deps =
     pre-commit>=2
@@ -51,66 +45,73 @@ commands =
     python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
 
 [testenv:type]
-description = try to merge our types against our source
+description = run type check on code base
+setenv =
+    {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    mypy==0.782
-    retype==20.10
+    mypy==0.930
 commands =
-    retype -p src/attrs_strict src/attrs_strict -t {envtmpdir}
-    retype -p src/attrs_strict src/attrs_strict/_version.py -t {envtmpdir}
-    mypy {envtmpdir} --strict
+    mypy --strict src/attrs_strict
+
+[testenv:coverage]
+description = combine coverage files and generate diff (against DIFF_AGAINST defaulting to origin/main)
+passenv =
+    DIFF_AGAINST
+setenv =
+    COVERAGE_FILE = {toxworkdir}/.coverage
+skip_install = true
+deps =
+    covdefaults>=2.1
+    coverage>=6.2
+    diff-cover>=6.4
+extras =
+parallel_show_output = true
+commands =
+    coverage combine
+    coverage report --skip-covered --show-missing
+    coverage xml -o {toxworkdir}/coverage.xml
+    coverage html -d {toxworkdir}/htmlcov
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+depends =
+    py310
+    py39
+    py38
+    py37
+    pypy3
 
 [testenv:docs]
-description = invoke sphinx-build to build the HTML docs
+description = build documentation
 extras =
     docs
 commands =
-    sphinx-build -d "{toxworkdir}/docs_doctree" "{toxinidir}/doc" "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
-    python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
+    sphinx-build -d "{envtmpdir}{/}doctree" doc "{toxworkdir}{/}docs_out" --color -b html {posargs}
+    python -c 'print(r"documentation available under file://{toxworkdir}{/}docs_out{/}index.html")'
 
-[testenv:package_description]
-description = check that the long description is valid
+[testenv:readme]
+description = check that the long description is valid (need for PyPI)
 skip_install = true
 deps =
-    build>=0.0.4
-    readme-renderer[md]>=24
+    build>=0.6
     twine>=3
+extras =
 commands =
-    python -m build --sdist --wheel . -o {envtmpdir}
+    pyproject-build -o {envtmpdir} --wheel --sdist .
     twine check {envtmpdir}/*
+
+[testenv:dev]
+description = generate a DEV environment
+usedevelop = true
+extras =
+    docs
+    test
+commands =
+    python -m pip list --format=columns
+    python -c 'import sys; print(sys.executable)'
 
 [flake8]
 max-complexity = 22
-max-line-length = 80
+max-line-length = 120
+noqa-require-code = true
 
 [pep8]
-max-line-length = 80
-
-[coverage:run]
-branch = true
-parallel = true
-
-[coverage:html]
-show_contexts = true
-
-[coverage:report]
-skip_covered = True
-show_missing = True
-exclude_lines =
-    \#\s*pragma: no cover
-    ^\s*raise AssertionError\b
-    ^\s*raise NotImplementedError\b
-    ^\s*return NotImplemented\b
-    ^\s*raise$
-    ^if __name__ == ['"]__main__['"]:$
-
-[coverage:paths]
-source = src/attrs_strict
-    */.tox/*/lib/python*/site-packages/attrs_strict
-    */.tox/pypy*/site-packages/attrs_strict
-    */.tox\*\Lib\site-packages\attrs_strict
-    */attrs_strict
-    *\attrs_strict
-
-[pytest]
-junit_family = xunit2
+max-line-length = 120
