--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,13 +1,18 @@
 version: 2
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.10"
+formats:
+  - htmlzip
+  - epub
+  - pdf
+python:
+   install:
+      - method: pip
+        path: .
+        extra_requirements: ["docs"]
 sphinx:
   builder: html
   configuration: doc/conf.py
   fail_on_warning: true
-formats: all
-python:
-   version: 3.7
-   install:
-      - method: pip
-        path: .
-build:
-  image: latest
