--- a/setup.cfg
+++ b/setup.cfg
@@ -15,13 +15,12 @@ classifiers =
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Topic :: Software Development :: Libraries
@@ -36,11 +35,8 @@ project_urls =
 packages = attrs_strict
 install_requires =
     attrs>=19.1.0
-    enum34;python_version<"3.4"
-    funcsigs>=1.0.2;python_version<'3.5'
-    typing>=3.7.4.1;python_version<'3.5'
-    typing_extensions;python_version<'3.8'
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4
+    typing-extensions;python_version<'3.8'
+python_requires = >=3.7
 package_dir =
     =src
 
@@ -51,14 +47,33 @@ where = src
 docs =
     Sphinx>=3
 test =
-    pytest>=4
-    pytest-cov>=2.6
-    enum34;python_version<"3.4"
-    mock;python_version<'3.3'
+    covdefaults>=2
+    pytest>=6
+    pytest-cov>=3
 
 [options.package_data]
-* = *.pyi
 attrs_strict = py.typed
 
-[bdist_wheel]
-universal = true
+[coverage:run]
+plugins = covdefaults
+parallel = true
+
+[coverage:paths]
+src =
+    src
+    .tox/*/lib/python*/site-packages
+    .tox/pypy*/site-packages
+    .tox\*\Lib\site-packages\
+    */src
+    *\src
+other =
+    .
+    */attrs-strict
+    *\attrs-strict
+
+[coverage:report]
+fail_under = 98
+
+[coverage:html]
+show_contexts = true
+skip_covered = false
