--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ description = run type check on code base
 setenv =
     {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    mypy==0.930
+    mypy==0.950
 commands =
     mypy --strict src/attrs_strict
 
@@ -61,9 +61,9 @@ setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage
 skip_install = true
 deps =
-    covdefaults>=2.1
-    coverage>=6.2
-    diff-cover>=6.4
+    covdefaults>=2.2
+    coverage>=6.3
+    diff-cover>=6.5
 extras =
 parallel_show_output = true
 commands =
@@ -71,7 +71,7 @@ commands =
     coverage report --skip-covered --show-missing
     coverage xml -o {toxworkdir}/coverage.xml
     coverage html -d {toxworkdir}/htmlcov
-    diff-cover --compare-branch {env:DIFF_AGAINST:origin/master} {toxworkdir}/coverage.xml
+    diff-cover --compare-branch {env:DIFF_AGAINST:origin/main} {toxworkdir}/coverage.xml
 depends =
     py310
     py39
@@ -91,8 +91,8 @@ commands =
 description = check that the long description is valid (need for PyPI)
 skip_install = true
 deps =
-    build>=0.6
-    twine>=3
+    build[virtualenv]>=0.7
+    twine>=4
 extras =
 commands =
     pyproject-build -o {envtmpdir} --wheel --sdist .
