--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.2.0
     hooks:
       - id: check-ast
       - id: check-builtin-literals
@@ -12,7 +12,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.29.1
+    rev: v2.32.1
     hooks:
       - id: pyupgrade
         args: [ "--py36-plus" ]
@@ -21,26 +21,26 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 22.3.0
     hooks:
       - id: black
         args: [ --safe ]
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.0
+    rev: v1.12.1
     hooks:
       - id: blacken-docs
-        additional_dependencies: [ black==21.12b0 ]
+        additional_dependencies: [ black== 22.3.0 ]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
     hooks:
       - id: rst-backticks
   - repo: https://github.com/tox-dev/tox-ini-fmt
-    rev: "0.5.1"
+    rev: "0.5.2"
     hooks:
       - id: tox-ini-fmt
         args: [ "-p", "fix" ]
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.0
+    rev: v1.20.1
     hooks:
       - id: setup-cfg-fmt
         args: [ --min-py3-version, "3.7", "--max-py-version", "3.10" ]
@@ -49,9 +49,9 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
-          - flake8-bugbear==21.11.29
-          - flake8-comprehensions==3.7
+          - flake8-bugbear==22.4.25
+          - flake8-comprehensions==3.9
           - flake8-pytest-style==1.6
-          - flake8-unused-arguments==0.0.9
-          - flake8-noqa==1.2.1
+          - flake8-unused-arguments==0.0.10
+          - flake8-noqa==1.2.2
           - pep8-naming==0.12.1
