--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ passenv =
 basepython = python3.10
 skip_install = true
 deps =
-    pre-commit>=2
+    pre-commit>=2.20
 commands =
     pre-commit run --all-files --show-diff-on-failure
     python -c 'import pathlib; print("hint: run \{\} install to add checks as pre-commit hook".format(pathlib.Path(r"{envdir}") / "bin" / "pre-commit"))'
@@ -49,7 +49,7 @@ description = run type check on code base
 setenv =
     {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    mypy==0.950
+    mypy==0.971
 commands =
     mypy --strict src/attrs_strict
 
@@ -62,7 +62,7 @@ setenv =
 skip_install = true
 deps =
     covdefaults>=2.2
-    coverage>=6.3
+    coverage>=6.4
     diff-cover>=6.5
 extras =
 parallel_show_output = true
@@ -91,7 +91,7 @@ commands =
 description = check that the long description is valid (need for PyPI)
 skip_install = true
 deps =
-    build[virtualenv]>=0.7
+    build[virtualenv]>=0.8
     twine>=4
 extras =
 commands =
@@ -112,6 +112,7 @@ commands =
 max-complexity = 22
 max-line-length = 120
 noqa-require-code = true
+dictionaries = en_US,python,technical,django
 
 [pep8]
 max-line-length = 120
